apps/demo1/overlay/main/demo1-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1-deployment
  labels:
    deployment.environment: production
spec:
  replicas: 1
  template:
    metadata:
      labels:
        deployment.environment: production
    spec:
      containers:
        - name: demo1
          image: jerryworld/demo1-main:f4b85c12f0828137c9df422f16ff551768e36f84
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: docker-hub-secret
