apps/demo1/overlay/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo1-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: jerry.world
      http:
        paths:
          - path: /demo1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: demo1
                port:
                  number: 80
